sventon change history
-----------------------------------------------------------------------------------------

[1252] Added: Upgraded to Spring 2.5.2.
[1246] Added: Feature #3499 - Diff tags.

[1242] Release 1.4 RC3 (2008-03-10)
[1236] Fixed: Bug #13325 - Search box too far on the right.
[1230] Added: Feature #4035 - Loosen restrictions on instance name.
[1228] Fixed: Bug #13308 - Validation error of instance name not handled properly.

[1223] Release 1.4 RC2 (2008-03-06)
[1219] Fixed: Bug #13268 - Peg revision not honored by RSS creator.
[1218] Fixed: Bug #13244 - Error during population of log message cache.

[1212] Release 1.4 RC1 (2008-02-19)
[1152] Added: Upgraded to Spring 2.5.1
[1145] Added: Feature #3999 - Inline diff view.
[1144] Fixed: Bug #9716 - Incorrect diff.
[1135] Fixed: Bug #6387 - Markup of changed file in logs view fails if it's renamed.
[1133] Added: Feature #2750 - Add help text divs.
[1131] Added: Upgraded to Lucene 2.2.0.
[1104] Added: Feature #3943 - Send notification mail for new revisions.
[1092] Added: Feature #3931 - Easy navigation between file revisions.
[1077] Added: Feature #3928 - Possibility to set an URL for display.
[1047] Added: Feature #3900 - Change behaviour when searching entries.
[1044] Fixed: Bug #12698 - Highlighting problem when searching using wildcards.
 [982] Added: Feature #2164 - Repository browsing with user credential.
 [978] Added: Feature #3809 - Popup file type when cursor hovers over.
 [977] Added: Upgraded to Spring 2.5
 [944] Added: Feature #3825 - Entry tray.

[1067] Release 1.3.1 (2007-12-22)
[1066] Fixed: Sessions were not closed (only affects svn protocol).

 [970] Release 1.3.0 (2007-11-28)

 [934] Release 1.3 RC3 (2007-10-22)
 [933] Fixed: Bug #12252 - Faulty escaping in log search result view.

 [932] Release 1.3 RC2 (2007-10-22)
 [921] Fixed: Bug #12143 - Unable to show properties for archive files.
 [917] Fixed: Bug #12136 - Log message not escaped properly.

 [916] Release 1.3 RC1 (2007-10-08)